...
        latitude: vehicle.latitude!, longitude: vehicle.longitude!, latitudeDelta: 0.01, longitudeDelta: 0.01,
      }, 500);
    }
  }

  return (
    <View style={styles.container} testID="map-screen">
      <MapView
        ref={mapRef}
        style={StyleSheet.absoluteFillObject}
        provider={Platform.OS === 'android' ? PROVIDER_GOOGLE : undefined}
        userInterfaceStyle="light"
        mapType={mapType}
...
